refactor: use employee model assembler to get a collectionf of employees