@@ -9,7 +9,6 @@ import com.pedrosa.demo.entities.Employee;
 import com.pedrosa.demo.repositories.EmployeeRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
@@ -36,11 +35,10 @@ public class EmployeeController {
   @GetMapping
   public CollectionModel<EntityModel<Employee>> findAll() {
 
-    List<EntityModel<Employee>> employees = employeeRepository.findAll().stream()
-        .map(employee -> EntityModel.of(employee,
-            linkTo(methodOn(EmployeeController.class).findById(employee.getId())).withSelfRel(),
-            linkTo(methodOn(EmployeeController.class).findAll()).withRel("employees")))
-        .collect(Collectors.toList());
+    List<EntityModel<Employee>> employees = employeeRepository.findAll()
+        .stream()
+        .map(employeeModelAssembler::toModel)
+        .toList();
 
     return CollectionModel.of(
         employees,
